Changed the line height of comment action labels to stop forum comments from shifting down on hover

--- a/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
+++ b/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
@@ -342,6 +342,7 @@
 
 				span {
 					display: none;
+					line-height: 1;
 				}
 
 				i {
